; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_glx_context.c_createLegacyContextGLX.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_glx_context.c_createLegacyContextGLX.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GLX_RGBA_TYPE = common dso_local global i32 0, align 4
@True = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @createLegacyContextGLX to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @createLegacyContextGLX(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @GLX_RGBA_TYPE, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @True, align 4
  %12 = call i32 @glXCreateNewContext(i32 %7, i32 %8, i32 %9, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @glXCreateNewContext(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
